--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,7 @@
-
+remote_theme: "mmistakes/minimal-mistakes@4.24.0"
+minimal_mistakes_skin: "air"
+title: "Joseph Lipe"
+name: "Joey Lipe"
+description: "Data Analyst Portfolio"
+url: "https://joeylipe.github.io"
+baseurl: ""
